--- a/assets/css/stylesProd.css
+++ b/assets/css/stylesProd.css
@@ -154,6 +154,10 @@ dfn {
  * Remove the border on images inside links in IE 10-.
  */
 
+img {
+  border-style: none;
+}
+
 /**
  * Hide the overflow in IE.
  */
@@ -448,6 +452,10 @@ ul {
  * https://github.com/tailwindcss/tailwindcss/issues/362
  */
 
+img {
+  border-style: solid;
+}
+
 /**
  * Temporary reset for a change introduced in Chrome 62 but now reverted.
  *
@@ -459,6 +467,11 @@ button,
 [type="reset"],
 [type="submit"] {
   border-radius: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 button,
@@ -508,15 +521,16 @@ button,
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1500px) {
   .container {
-    max-width: 1200px;
+    max-width: 1500px;
   }
 }
 
 /* Site Specific */
 
-body {
+body,
+body.home {
   background-image: url(/img/tlo.jpg);
   font-family: 'Titillium Web', sans-serif;
   background-position: 50% 0;
@@ -532,17 +546,11 @@ body {
   }
 }
 
-body.home {
-  background-image: url(/img/tlo-home.png), url(/img/tlo.jpg);
-  background-position: 35% 320px, 50% 0;
-  background-size: contain, cover;
-}
-
-@media screen and (min-width: 1575px) {
-  body.home {
-    background-position: 35% 120px, 50% 0;
+/*@media screen and (min-width: 1500px) {
+  .tlo-home {
+    margin-top: -100px;
   }
-}
+}*/
 
 .container {
   max-width: 1920px;
@@ -586,7 +594,7 @@ header:after {
   background: transparent url(/img/hexy.svg) 0 0 no-repeat;
   position: absolute;
   bottom: -70px;
-  left: 43%;
+  left: 42%;
   z-index: -1;
 }
 
@@ -675,16 +683,24 @@ header:after {
   margin-right: auto;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .mr-6 {
   margin-right: 1.5rem;
 }
 
-.mb-24 {
-  margin-bottom: 6rem;
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
 }
 
 .max-w-lg {
@@ -754,6 +770,10 @@ header:after {
     margin-right: 0;
   }
 
+  .sm\:mt-4 {
+    margin-top: 1rem;
+  }
+
   .sm\:ml-6 {
     margin-left: 1.5rem;
   }
@@ -763,17 +783,21 @@ header:after {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
 
-  .md\:-mt-6 {
+  .lg\:-mt-6 {
     margin-top: -1.5rem;
   }
-}
-
-@media (min-width: 992px) {
 
   .lg\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
+  }
+}
+
+@media (min-width: 1500px) {
+
+  .xl\:-mt-24 {
+    margin-top: -6rem;
   }
 }
